- fixed: fixed an issue with wrong FontAwesome icon sizes after upgrading to Sencha CMD 6.5.36 (closes conjoon/app-cn_mail#17)

--- a/sass/src/view/main/Viewport.scss
+++ b/sass/src/view/main/Viewport.scss
@@ -62,3 +62,19 @@
         font-size        : 14px;
     }
 }
+
+/**
+ * @see conjoon/app-cn_mail#17
+ */
+.x-tab-icon-el-default {
+    font-size: 20px;
+    line-height: 20px;
+}
+
+/**
+ * @see conjoon/app-cn_mail#17
+ */
+.x-tree-icon {
+    font-size: 16px;
+    line-height: 32px;
+}
